# funes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  test_1dacb6c6-0678-483a-be84-73b497c3b143.db  test_52cfdefc-f668-47c7-aa89-e4e0f17ce5d1.db  test_a8a19a31-af9b-4c09-9de3-48ffb3c9046a.db  test_c632b689-d88c-456b-9104-ea85603ec873.db  test_fbba98a4-e8e7-4ef5-b96e-bf62db4657d2.db
src/: chunker.rs  config.rs  embedder.rs  main.rs  query.rs  store.rs  watcher.rs
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: layout.tsx  page.tsx
web/app/docs/commands/: page.tsx
web/app/docs/configuration/: page.tsx
web/app/docs/getting-started/: page.tsx
web/app/docs/how-it-works/: page.tsx
web/components/layout/: DocsSidebar.tsx  Footer.tsx  Navbar.tsx  footer.tsx  navbar.tsx
web/components/sections/: Demo.tsx  Features.tsx  Hero.tsx  Install.tsx  Roadmap.tsx  features.tsx  hero.tsx  install.tsx  roadmap.tsx
web/components/ui/: Button.tsx  Logo.tsx  ThemeProvider.tsx  terminal-demo.tsx
