[package]
name = "funes-memory"
version = "1.0.0"
edition = "2021"
description = "Your machine's memory, queryable. Local AI memory for the terminal."
license = "MIT"
repository = "https://github.com/bhavv04/funes"
homepage = "https://get-funes.vercel.app/"
keywords = ["ai", "memory", "search", "cli", "ollama"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
uuid = { version = "1", features = ["v4"] }